Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.2, 4.7.0
-
Any version of Symbian, abld and/or Raptor
-
a9822d39136a3f7912cc68320cfe030d95b4cb4f,33ad8aa89a214143f3ffb0850e81daffca2ac68d
Description
Shadow building doesn't work for Symbian builds for various reasons:
- wrappers for createpackage and patch_capabilities aren't created in the shadow bin dir
- various files are written to the source tree rather than the build tree (MMP files, wrapper makefiles, custom def files, support pkg files for the smart installer)
- extra targets (in particular PREDEP_TARGET, the paths to the Qt include directory in the DEPS, and the output file in the COMMAND) inside the bld.inf are written to the source tree, rather than the build tree
- same problem for the mifconv extension block - SOURCEDIR is wrong
- qmake_store_build output (.make.cache) probably needs checking as well
- paths inside the MMP file (sourcepath, and DEF files) are relative to the .pro file, rather than relative to the build tree (except for paths to the tmp directory, which are accidentially correct (but no files will be generated there because of the problem above), and SYSTEMINCLUDE, which are again accidentially correct)
- the *_installer.pkg looks for the SIS file in the source tree, rather than the build tree
That's about it.
Attachments
Issue Links
- is required for
-
QTCREATORBUG-3051 shadow building for symbian
-
- Closed
-