Shadow building on Symbian fixes: part 1 - files to right place

First in a set of fixes for shadow building on Symbian - make sure we
generate all the files into the shadow directory, *not* the source
directory

Task-number: QTBUG-10432
Reviewed-by: Miikka Heikkinen